--- a/main.html
+++ b/main.html
@@ -7,7 +7,26 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img src="Profile Photo(Juhi).jpg">
+	<h1>JUHI</h1>
+	<a href="https://www.linkedin.com/in/juhi-vyas-818a43284/">Linkdn</a>
+	<div id="skills">
+	<h2>Skills</h2>
+	<ul>
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>JavaScript</li>
+	</ul>
+	</div>	
+
+	<div id="projects">
+	<h2>Projects</h2>
+	<ul>
+		<li>Linkdin clone</li>
+		<li>To Do App</li>
+		<li>Amazon clone</li>
+	</ul>
+	</div>	
     <script type="text/javascript" src="./script.js">
 </script>
 
